修复异常场景